--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,9 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
+    env:
+      VITE_API_URL: ${{ vars.API_URL }}
+      VITE_NODE_NAME: ${{ vars.NODE_NAME }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
