--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,8 +24,8 @@ jobs:
   # Single deploy job since we're just deploying
   deploy:
     env:
-      VITE_API_URL: ${{ vars.API_URL }}
-      VITE_NODE_NAME: ${{ vars.NODE_NAME }}
+      VITE_API_URL: ${{ secrets.API_URL }}
+      VITE_NODE_NAME: ${{ secrets.NODE_NAME }}
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -42,6 +42,9 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+        env:
+          VITE_API_URL: ${{ secrets.API_URL }}
+          VITE_NODE_NAME: ${{ secrets.NODE_NAME }}
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
